--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.129.2",
@@ -21,8 +23,9 @@
     "antd": "^5.26.6",
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
-    "pdfjs-dist": "5.3.93",
+    "pdfjs-dist": "^3.4.120",
     "prettier": "^3.6.2",
+    "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
@@ -33,6 +36,7 @@
   "devDependencies": {
     "@eslint/js": "^9.31.0",
     "@tanstack/eslint-plugin-query": "^5.81.2",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
