--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^4.3.0",
+    "@react-spring/web": "^10.0.1",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.129.2",
     "@tanstack/router-plugin": "^1.129.2",
     "@types/node": "^24.1.0",
+    "@use-gesture/react": "^10.3.1",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "antd": "^5.26.6",
     "axios": "^1.10.0",
