--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-pdf": "^10.0.1",
+    "react-use-gesture": "^9.1.3",
     "react-zoom-pan-pinch": "^3.7.0",
     "vite-plugin-svgr": "^4.3.0",
     "zustand": "^5.0.6"
