--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "antd": "^5.26.6",
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "5.3.31",
     "prettier": "^3.6.2",
     "qs": "^6.14.0",
     "react": "^19.1.0",
